{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 46,
  "lineage": "cadca940-65c6-bf1e-976f-846d400c24f9",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cefd38191d04487d",
            "arn": "arn:aws:ec2:ap-southeast-1:783764580882:elastic-ip/eipalloc-0cefd38191d04487d",
            "association_id": "eipassoc-07f6169edcb64235c",
            "domain": "vpc",
            "id": "eipalloc-0cefd38191d04487d",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0fb07a8aaeff599c4",
            "private_dns": "ip-10-0-1-58.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.58",
            "public_dns": "ec2-18-142-212-128.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.142.212.128",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nat-eip",
              "Project": "eks-platform"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:783764580882:internet-gateway/igw-0bc918e6fe5ba2e18",
            "id": "igw-0bc918e6fe5ba2e18",
            "owner_id": "783764580882",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-igw",
              "Project": "eks-platform"
            },
            "vpc_id": "vpc-0bcc2fb96061cb136"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cefd38191d04487d",
            "association_id": "eipassoc-07f6169edcb64235c",
            "connectivity_type": "public",
            "id": "nat-0d34f7bc94047c3b8",
            "network_interface_id": "eni-0fb07a8aaeff599c4",
            "private_ip": "10.0.1.58",
            "public_ip": "18.142.212.128",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0634a259eebd569d3",
            "tags": {
              "Name": "dev-nat"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nat",
              "Project": "eks-platform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:783764580882:route-table/rtb-0cac8488177c919a2",
            "id": "rtb-0cac8488177c919a2",
            "owner_id": "783764580882",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d34f7bc94047c3b8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-private-rt",
              "Project": "eks-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcc2fb96061cb136"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:783764580882:route-table/rtb-0963ec8b866b03455",
            "id": "rtb-0963ec8b866b03455",
            "owner_id": "783764580882",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc918e6fe5ba2e18",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-public-rt",
              "Project": "eks-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcc2fb96061cb136"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pod-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07afd549d4ebc5092",
            "route_table_id": "rtb-0cac8488177c919a2",
            "subnet_id": "subnet-0d9eead9d1da246b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.pod",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "pod-b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e056ac7ced0e063",
            "route_table_id": "rtb-0cac8488177c919a2",
            "subnet_id": "subnet-00f5304617d391b47"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.pod",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "pod-c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f94f0de9ddf7838",
            "route_table_id": "rtb-0cac8488177c919a2",
            "subnet_id": "subnet-0c7816a93e745cfad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.pod",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0166f0dd425adefda",
            "route_table_id": "rtb-0cac8488177c919a2",
            "subnet_id": "subnet-0fd5c8d0061888a65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0938545fd45583857",
            "route_table_id": "rtb-0cac8488177c919a2",
            "subnet_id": "subnet-0e54f5d6f5fa27a62"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e705b0391e156077",
            "route_table_id": "rtb-0cac8488177c919a2",
            "subnet_id": "subnet-06cb3eed179e0850d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0545796ad2314411b",
            "route_table_id": "rtb-0963ec8b866b03455",
            "subnet_id": "subnet-0634a259eebd569d3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03759fa59c63d7731",
            "route_table_id": "rtb-0963ec8b866b03455",
            "subnet_id": "subnet-0276193b88270280b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0787931cf45aaa882",
            "route_table_id": "rtb-0963ec8b866b03455",
            "subnet_id": "subnet-029853ec0bf3ac387"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pod-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:783764580882:subnet/subnet-0d9eead9d1da246b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "100.64.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9eead9d1da246b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "783764580882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pod-a",
              "Type": "pod"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "pod-a",
              "Project": "eks-platform",
              "Type": "pod"
            },
            "vpc_id": "vpc-0bcc2fb96061cb136"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "pod-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:783764580882:subnet/subnet-00f5304617d391b47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "100.64.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f5304617d391b47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "783764580882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pod-b",
              "Type": "pod"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "pod-b",
              "Project": "eks-platform",
              "Type": "pod"
            },
            "vpc_id": "vpc-0bcc2fb96061cb136"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "pod-c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:783764580882:subnet/subnet-0c7816a93e745cfad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "100.64.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7816a93e745cfad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "783764580882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pod-c",
              "Type": "pod"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "pod-c",
              "Project": "eks-platform",
              "Type": "pod"
            },
            "vpc_id": "vpc-0bcc2fb96061cb136"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:783764580882:subnet/subnet-0fd5c8d0061888a65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd5c8d0061888a65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "783764580882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-a",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "private-a",
              "Project": "eks-platform",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bcc2fb96061cb136"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:783764580882:subnet/subnet-0e54f5d6f5fa27a62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e54f5d6f5fa27a62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "783764580882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-b",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "private-b",
              "Project": "eks-platform",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bcc2fb96061cb136"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:783764580882:subnet/subnet-06cb3eed179e0850d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cb3eed179e0850d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "783764580882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-c",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "private-c",
              "Project": "eks-platform",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bcc2fb96061cb136"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:783764580882:subnet/subnet-0634a259eebd569d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0634a259eebd569d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "783764580882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-a",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "public-a",
              "Project": "eks-platform",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bcc2fb96061cb136"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:783764580882:subnet/subnet-0276193b88270280b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0276193b88270280b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "783764580882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-b",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "public-b",
              "Project": "eks-platform",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bcc2fb96061cb136"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:783764580882:subnet/subnet-029853ec0bf3ac387",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029853ec0bf3ac387",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "783764580882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-c",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "public-c",
              "Project": "eks-platform",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bcc2fb96061cb136"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:783764580882:vpc/vpc-0bcc2fb96061cb136",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03cbacb1b1f797070",
            "default_route_table_id": "rtb-07c89ff2f4da255d0",
            "default_security_group_id": "sg-06e95905a616368e5",
            "dhcp_options_id": "dopt-01904051164e477a9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bcc2fb96061cb136",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07c89ff2f4da255d0",
            "owner_id": "783764580882",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc",
              "Project": "eks-platform"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}